# DESAFIO-4-2

./: README.md  sdkconfig
Recursos/: base cofre.txt  input_teclado.txt  links.txt
components/HCF_ADC/: CMakeLists.txt  HCF_ADC.c  HCF_ADC.h
components/HCF_IOTEC/: CMakeLists.txt  HCF_IOTEC.c  HCF_IOTEC.h
components/HCF_LCD/: CMakeLists.txt  HCF_LCD.c  HCF_LCD.h
components/HCF_MP/: CMakeLists.txt  HCF_MP.c  HCF_MP.h
main/: CMakeLists.txt  app_main.c
